salesforce/force-app/main/default/objects/MessagingSession/fields/Chess_Player_Email__c.field-meta.xml
<CustomField>
    <fullName>Chess_Player_Email__c</fullName>
    <label>Chess Player Email</label>
    <type>Text</type>
    <length>255</length>
    <description>The signed-in player's real email, passed from the web app via MIAW hidden prechat field and written here by the Omni routing flow. The Chess Coach agent reads it (@MessagingSession.Chess_Player_Email__c) and passes it to ChessCoachGetLiveGame, which pulls the live board from Rails keyed by email — bypassing the unreliable @MessagingEndUser.ContactId context, which arrives null at reasoning time.</description>
</CustomField>