salesforce/force-app/main/default/objects/MessagingSession/fields/Chess_Status__c.field-meta.xml
<CustomField>
    <fullName>Chess_Status__c</fullName>
    <label>Chess Status</label>
    <type>Text</type>
    <length>20</length>
    <description>On-screen chess game context passed from the web app via MIAW hidden prechat field, written here by the Omni routing flow so the Chess Coach agent can read it.</description>
</CustomField>