salesforce/force-app/main/default/objects/MessagingSession/fields/Chess_Turn__c.field-meta.xml
<CustomField>
    <fullName>Chess_Turn__c</fullName>
    <label>Chess Turn</label>
    <type>Text</type>
    <length>10</length>
    <description>On-screen chess game context passed from the web app via MIAW hidden prechat field, written here by the Omni routing flow so the Chess Coach agent can read it.</description>
</CustomField>